--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,10 +20,7 @@ body {
   overflow-x: hidden;
 }
 
-body {
-  font-family: client-thin;
-  font-size: 24px;
-  color: white;
+html {
   background: url("/bg.png") repeat;
   background-size: 162px;
   image-rendering: pixelated;
@@ -31,6 +28,17 @@ body {
   animation-duration: 4s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
+}
+
+body {
+  font-family: client-thin;
+  font-size: 24px;
+  color: white;
+  background: url("/banner.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: 50% 0;
+  min-height: 100vh;
 }
 
 @keyframes background-loop {
